--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ nav {
     padding: 0.6rem 1.2rem;
     background: linear-gradient(135deg, rgba(30, 60, 114, 0.8) 0%, rgba(0, 212, 255, 0.8) 100%);
     backdrop-filter: blur(5px); /* Ефект скла */
-    color: #d500f9; /* Неоново-фіолетовий текст */
+    color: #ffffff; /* Неоново-фіолетовий текст */
     text-decoration: none;
     font-weight: bold;
     border-radius: 15px;
